# VecGrep

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
src/vecgrep/: __init__.py  chunker.py  embedder.py  server.py  store.py
