[project]
name = "vecgrep"
version = "0.1.0"
description = "Cursor-style vector search MCP plugin for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter-languages>=1.10.0",
    "numpy>=1.26.0",
]

[project.scripts]
vecgrep = "vecgrep.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vecgrep"]
